# JiraDesktop

./: .gitignore  CMakeLists.txt  README.md  cmakeconfig.h.in  common-pch.h  platform.hpp  program_version.h.in
apps/: CMakeLists.txt
apps/Tasks/: CMakeLists.txt
apps/Tasks/inc/: AboutDlg.h  AppModel.h  AppNodes.h  AppSettings.h  ConnectionDlg.h  CredentialManager.h  Logger.hpp  LoginDlg.h  TaskBarIcon.h  TasksActions.h  TasksFrame.h  TasksView.h  XHRConstructor.h  jira.h  resource.h  stdafx.h
apps/Tasks/src/: .gitignore  AboutDlg.cpp  AppModel.cpp  AppNodes.cpp  AppSettings.cpp  ConnectionDlg.cpp  CredentialManager.cpp  Logger.cpp  LoginDlg.cpp  Tasks.cpp  Tasks.rc  Tasks.rcconf  TasksActions.cpp  TasksFrame.cpp  TasksStrings.idl  TasksView.cpp  XHRConstructor.cpp  font-awesome.py  font_awesome.cc  font_awesome.hh  mui.tmplt.rc  resource.h  stdafx.cpp  version.h
arts/: attention.xcf  icon-16.xcf  icon-20.xcf  icon-24.xcf  icon-256.xcf  icon-32.xcf  icon-48.xcf  icon-96.xcf  tasks-new.xcf
cmake/: BuildConfig.cmake  FindWTL.cmake
gtest/: CMakeLists.txt
installer/: .gitignore  Tasks.wxs  build.py  build_tag.py  cabuild.py  copy_res.py  libbuild.py  libpack.py  mit-license.rtf  msbuild.py  notes.py  pack.py  upload.py  version.py  version_json.py
installer/custom/src/: CloseTasksAction.cpp  export.def  pch.h  resources.rc  windll.cpp
installer/www/: .gitignore  index.py  name.json  touchup.py
installer/www/ui/: pages.css
libs/: CMakeLists.txt
libs/libgui/: CMakeLists.txt  font_awesome.py
libs/libgui/inc/gui/: action.hpp  animation.hpp  cairo_painter.hpp  document.hpp  font_awesome.hh  gdi_painter.hpp  gdi_style_handle.hpp  hotkey.hpp  image.hpp  listeners.hpp  menu.hpp  node.hpp  nodes.hpp  painter.hpp  painter_base.hpp  settings.hpp  styles.hpp  types.hpp  win32_animation.hpp
libs/libgui/inc/gui/nodes/: block_node.hpp  caption_row_node.hpp  doc_element.hpp  document_impl.hpp  image_nodes.hpp  link_node.hpp  node_base.hpp  row_node.hpp  span_node.hpp  table_node.hpp  text_node.hpp
libs/libgui/pch/: pch.h
libs/libgui/src/: animation.cpp  cairo_painter.cpp  font_awesome.cc  hotkey.cpp  json_settings.cpp  json_settings.hpp  nodes.cpp  painter_base.cpp  settings.cpp  settings_impl.hpp  styles.cpp  utf8.cpp
libs/libgui/src/nodes/: block_node.cpp  caption_row_node.cpp  doc_element.cpp  document_impl.cpp  image_nodes.cpp  link_node.cpp  node_base.cpp  row_node.cpp  span_node.cpp  table_node.cpp  text_node.cpp
libs/libgui/src/win32/: win32_action.cpp  win32_animation.cpp  win32_gdi_painter.cpp  win32_gdi_style_handle.cpp  win32_hotkey.cpp  win32_menu.cpp  win32_node_base.cpp  win32_nodes.cpp  win32_settings.cpp  win32_settings.hpp
libs/libjira/: CMakeLists.txt
libs/libjira/inc/jira/: jira.hpp  listeners.hpp  server.hpp
libs/libjira/pch/: pch.h
libs/libjira/src/: jira.cpp  server.cpp  types.cpp  types.hpp  values.cpp  values.hpp
libs/libjira/src/win32/: win32_secure.cpp
libs/libjson/: CMakeLists.txt
libs/libjson/inc/json/: json.hpp  serdes.hpp
libs/libjson/pch/: pch.cpp  pch.h
libs/libjson/src/: json.cpp
libs/libnet/: CMakeLists.txt
libs/libnet/inc/net/: filesystem.hpp  post_mortem.hpp  uri.hpp  utf8.hpp  xhr.hpp  xhr_logger.hpp
libs/libnet/pch/: pch.h
libs/libnet/src/: curl_http.cpp  curl_http.hpp  filesystem.cpp  uri.cpp  utf8.cpp  xhr.cpp
libs/libnet/src/posix/: posix_xhr.cpp
libs/libnet/src/win32/: win32_filesystem.cpp  win32_xhr.cpp
libs/libnet/ut/: uri.cc
scripts/: jenkins.cmd  jenkins_win32.py  msbuild.py
strings/: Makefile  attr_language.txt
strings/en/: TasksStrings.po
strings/pl/: TasksStrings.po
win32/: Tasks.Debug.props  Tasks.Release.props  Tasks.Win32.props  Tasks.h  Tasks.props  Tasks.rc  Tasks.sln  Tasks.vcxproj  Tasks.vcxproj.filters  TasksFrame.cpp  TasksFrame.h  TasksView.h  WTLRoot.props  resource.h  stdafx.h
